--- a/index.html
+++ b/index.html
@@ -9,6 +9,22 @@
 <body>
   <h1>Gowtham Here</h1>
 
+  <!-- 16. Write a JavaScript function to get the values of First and Last names of the following form. -->
+  
+  <form id="form1" onsubmit="getFormvalue()">
+    First name: <input type="text" id="fname" name="fname" value="Gowtham"><br>
+    Last name: <input type="text" id="lname" name="lname" value="Thangaraj"><br>
+    <input type="submit" value="Submit">
+  </form>
+
+  <script>
+    function getFormvalue() {
+      const firstName = document.getElementById("fname").value;
+      const lastName = document.getElementById("lname").value;
+
+      alert("First name: " + firstName + "\nLast name: " + lastName);
+      }
+  </script>
 
 
 
